--- a/lib/templates/chooser.mustache
+++ b/lib/templates/chooser.mustache
@@ -68,8 +68,8 @@
                 </div>
 
                 <div class="submitbuttons">
-                    <input type="submit" name="submitbutton" class="submitbutton btn btn-primary" value={{#quote}}{{#str}}add{{/str}}{{/quote}}>
-                    <input type="submit" name="addcancel" class="addcancel btn btn-secondary" value={{#quote}}{{#str}}cancel{{/str}}{{/quote}}>
+                    <input type="submit" name="submitbutton" class="submitbutton btn btn-primary" value="{{#strs}}add{{/strs}}">
+                    <input type="submit" name="addcancel" class="addcancel btn btn-secondary" value="{{#strs}}cancel{{/strs}}">
                 </div>
 
             </form>
