--- a/message/templates/message_drawer.mustache
+++ b/message/templates/message_drawer.mustache
@@ -38,7 +38,7 @@
         <div id="message-drawer-{{uniqid}}" class="message-app" data-region="message-drawer" role="region">
             <div class="closewidget text-right pr-2">
                 <a class="text-dark btn-link" data-action="closedrawer" href="#"
-                   title="{{#str}} closebuttontitle {{/str}}" aria-label="{{#str}} closebuttontitle {{/str}}"
+                   title="{{#strs}} closebuttontitle {{/strs}}" aria-label="{{#strs}} closebuttontitle {{/strs}}"
                 >
                     {{#pix}} i/window_close, core {{/pix}}
                 </a>
